@@ -21,7 +21,6 @@ package org.apache.hadoop.mapreduce.lib.input;
 import java.io.IOException;
 import java.util.List;
 
-import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileStatus;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
@@ -30,6 +29,7 @@ import org.apache.hadoop.io.SequenceFile;
 import org.apache.hadoop.io.MapFile;
 import org.apache.hadoop.mapreduce.InputFormat;
 import org.apache.hadoop.mapreduce.InputSplit;
+import org.apache.hadoop.mapreduce.JobContext;
 import org.apache.hadoop.mapreduce.RecordReader;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
 
@@ -43,12 +43,14 @@ public class SequenceFileInputFormat<K, V> extends FileInputFormat<K, V> {
     return new SequenceFileRecordReader<K,V>();
   }
 
+  @Override
   protected long getFormatMinSplitSize() {
     return SequenceFile.SYNC_INTERVAL;
   }
 
-  protected List<FileStatus> listStatus(Configuration job
-                                              )throws IOException {
+  @Override
+  protected List<FileStatus> listStatus(JobContext job
+                                        )throws IOException {
 
     List<FileStatus> files = super.listStatus(job);
     int len = files.size();
@@ -56,7 +58,7 @@ public class SequenceFileInputFormat<K, V> extends FileInputFormat<K, V> {
       FileStatus file = files.get(i);
       if (file.isDir()) {     // it's a MapFile
         Path p = file.getPath();
-        FileSystem fs = p.getFileSystem(job);
+        FileSystem fs = p.getFileSystem(job.getConfiguration());
         // use the data file
         files.set(i, fs.getFileStatus(new Path(p, MapFile.DATA_FILE_NAME)));
       }
